NavBar med Symboler

--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">KickAss Kontorsprylar AB</a>
+                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-scissors"></span> KickAss Kontorsprylar AB</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Produktkatalog<span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -38,8 +38,8 @@
                             <li><a href="#">Vanliga frågor</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Din varukorg</a></li>
-                    <li><a href="#">Sök</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Din varukorg</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-search"></span> Sök</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
