--- a/KickAss2/src/KickAss2/Views/Products/Create.cshtml
+++ b/KickAss2/src/KickAss2/Views/Products/Create.cshtml
@@ -1,8 +1,7 @@
-﻿@using KickAss2.ViewModels
-@model CreateProductVM
+﻿@model CreateProductVM
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    
     ViewBag.Title = "Lägg till en produkt";
 }
 
