--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Din varukorg</a></li>
-                                <li><a href="#"><span class="glyphicon glyphicon-search"></span> Sök</a></li>
+                                <li><a href="#"><input type="text" name="FirstName" placeholder="Ange sökordet"> <span class="glyphicon glyphicon-search"></span> Sök</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/user/createuser"><span class="glyphicon glyphicon-user"></span> Registrera</a></li>
@@ -69,6 +69,7 @@
 
     <div class="container-fluid">
         <div class="row">
+            <!-- #region Fotter -->
             <div class="col-sm-3" style="background-color:#222222; color:#9D9D9D; padding:5px; text-align: center">
                 <h4><span class="glyphicon glyphicon-earphone"></span> Kontakta oss</h4>
                 <p>+46 708 460 256</p>
@@ -89,6 +90,20 @@
                 <p>Logga in / Registrera</p>
                 <p>Glömt lösenord?</p>
             </div>
+            <!-- #endregion -->
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <!-- #region Fotter -->
+            <div class="col-sm-12" style="background-color:forestgreen; color:white; padding:5px; text-align: center">
+                © 2016 - All Rights Reserved - Kick Ass Kontorsprylar AB
+            </div>
+            <div class="col-sm-12" style="background-color:forestgreen; color:transparent; padding:5px; text-align: center">
+                .
+            </div>
+            <!-- #endregion -->
         </div>
     </div>
 
