--- a/KickAss2/src/KickAss2/Views/User/CreateUser.cshtml
+++ b/KickAss2/src/KickAss2/Views/User/CreateUser.cshtml
@@ -72,10 +72,10 @@
             <div class="row" style="color:transparent"> .</div>
             <div class="row">
                 <div class="col-sm-2">
-                    <label>Upprepa</label> <label asp-for="VerifiedPassword"></label><label>et </label>
+                <label asp-for="VerifiedPassword"></label>
                 </div>
                 <div class="col-sm-4">
-                    <input type="password" asp-for="VerifiedPassword" placeholder="Lösenord">
+                    <input type="password" asp-for="VerifiedPassword" placeholder="Lösenord igen">
                     <span asp-validation-for="VerifiedPassword"></span>
                 </div>
             </div>
