LogIn Partial View fixad. (Ligger nu i Home/Index)

--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
                 <!-- #endregion -->
             </div>
             <div id="row3" class="row">
+                @Html.Partial("LogIn")
                 @RenderBody()
             </div>
         </div>
