--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                                 <li class="dropdown">
                                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss<span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">Kontakta oss</a></li>
+                                        <li><a href="/KickAssInformation/ContactUs">Kontakta oss</a></li>
                                         <li><a href="#">Företagsinformation</a></li>
                                         <li><a href="#">Vanliga frågor</a></li>
                                     </ul>
@@ -57,7 +57,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/user/createuser"><span class="glyphicon glyphicon-user"></span> Registrera</a></li>
-                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
+                                <li><a href="/Home/LogIn"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
                             </ul>
                         </div>
                     </div>
@@ -65,7 +65,6 @@
                 <!-- #endregion -->
             </div>
             <div id="row3" class="row">
-                @Html.Partial("LogIn")
                 @RenderBody()
             </div>
         </div>
