--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/user/createuser"><span class="glyphicon glyphicon-user"></span> Registrera</a></li>
-                                <li><a href="/Home/LogIn"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
+                                <li><a href="/home/login"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
                             </ul>
                         </div>
                     </div>
