--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
         </div>
         <div id="row3" class="row">
             @RenderBody()
+            <p style="color: transparent">.</p>
         </div>
     </div>
     </div>
