--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -7,6 +7,23 @@
     }
 </style>
 
+<div id="row1" class="row" style="padding: 5px"; text-align: center>
+    <div class="col-sm-12">
+        <h1 style="text-align: center">Inspiration</h1>
+    </div>
+</div>
+<div id="row2" class="row" style="padding: 5px; text-align: center">
+    <div class="col-sm-4">
+        <p>Hur ska du möblera ditt kontor?</p>
+    </div>
+    <div class="col-sm-4"; text-align: center>
+        <p>Vi har mycket, från batonger till pennor!</p>
+    </div>
+    <div class="col-sm-4"; text-align: center>
+        <p>Så vad ska du ha?</p>
+    </div>
+</div>
+
 <div class="container-fluid">
     <br>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
