Labbat med bilder

--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -14,13 +14,20 @@
 </div>
 <div id="row2" class="row" style="padding: 5px; text-align: center">
     <div class="col-sm-4">
-        <p>Hur ska du möblera ditt kontor?</p>
+        <img src="~/images/inspiration1.jpg" class="img-responsive" style="width: 100%; height: 100%"/>
+        <p style="text-align: left; font-weight: bold">Block, 20 kr</p>
+        <p style="text-align: left">Hur ska du möblera ditt kontor?</p>
+
     </div>
-    <div class="col-sm-4"; text-align: center>
-        <p>Vi har mycket, från batonger till pennor!</p>
+    <div class="col-sm-4">
+        <img src="~/images/inspiration2.jpg" class="img-responsive" style="width: 100%; height: 100%"/>
+        <p style="text-align: left; font-weight: bold">Block, 20 kr</p>
+        <p style="text-align: left">Hur ska du möblera ditt kontor?</p>
     </div>
-    <div class="col-sm-4"; text-align: center>
-        <p>Så vad ska du ha?</p>
+    <div class="col-sm-4">
+        <img src="~/images/inspiration3.jpg" class="img-responsive" style="width: 100%; height: 100%"/>
+        <p style="text-align: left; font-weight: bold">Block, 20 kr</p>
+        <p style="text-align: left">Hur ska du möblera ditt kontor?</p>
     </div>
 </div>
 
