--- a/KickAss2/src/KickAss2/Views/KickAssInformation/ContactUs.cshtml
+++ b/KickAss2/src/KickAss2/Views/KickAssInformation/ContactUs.cshtml
@@ -80,7 +80,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <input id="submit" name="submit" type="submit" value="Skicka" class="btn btn-success" style="background-color: forestgreen">
+            <input type="button" value="Skicka" class="btn btn-success" style="background-color: forestgreen">
         </div>
     </div>
     <div class="form-group">
