Kommenterat bort kod för hemsidetestning.

--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <!-- #region Fotter -->
+            <!-- #region Footer -->
             <div class="col-sm-3" style="background-color:#222222; color:#9D9D9D; padding:5px; text-align: center">
                 <h4><span class="glyphicon glyphicon-earphone"></span> Kontakta oss</h4>
                 <p>+46 708 460 256</p>
