--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
 										<a class="dropdown-toggle" data-toggle="dropdown" href="#">Produktkatalog<span class="caret"></span></a>
 										<ul class="dropdown-menu">
 											<!-- Get categories, print main category, look for sub-categories, continue -->
-											@foreach (var category in (List<CategoryVM>)ViewData["Categories"])
+											@*@foreach (var category in (List<CategoryVM>)ViewData["Categories"])
 											{
 												if (category.ParentID == 0)
 												{
@@ -68,7 +68,7 @@
 													{
 														<li><a href="#category@subcategory.CategoryID">@subcategory.Name</a></li> }
 												}
-											}
+											}*@
 									<!-- end of categories -->
 								</ul>
 
