--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -77,8 +77,8 @@
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss<span class="caret"></span></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="/KickAssInformation/ContactUs">Kontakta oss</a></li>
-                                            <li><a href="#">Företagsinformation</a></li>
-                                            <li><a href="#">Vanliga frågor</a></li>
+                                            <li><a href="/KickAssInformation/About">Företagsinformation</a></li>
+                                            <li><a href="/KickAssInformation/Questions">Vanliga frågor</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Din varukorg</a></li>
